[sc-7750] Fix Nuclia Understanding API translations

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -20,7 +20,7 @@
 	"account.code_saved": "Codi introduït",
 	"account.config": "Configuració del compte",
 	"account.create_new_db": "Crear nou compte Nuclia DB",
-	"account.create_nua_key": "Creeu una nova clau d'API de comprensió de Nuclia",
+	"account.create_nua_key": "Creeu una nova clau Nuclia Understanding API",
 	"account.day_left": "Queda 1 dia",
 	"account.days_left": "Queden {{days}} dies",
 	"account.db_zone_description": "Escull la zona i el proveïdor de processament que vols fer servir per aquesta compte. De forma predeterminada apareix la zona escollida a l’Account",
@@ -38,7 +38,7 @@
 	"account.delete_user": "Vols suprimir l'usuari?",
 	"account.delete_user_confirm": "Vols eliminar el teu usuari i l'accés a Nuclia ?",
 	"account.delete_user_warning": "Segur que vols eliminar l'usuari {{ username }}?",
-	"account.edit_nua_key": "Editeu la clau de l'API de comprensió de Nuclia",
+	"account.edit_nua_key": "Editeu la clau Nuclia Understanding API",
 	"account.email_info": "Correu electrònic de contacte associat a la clau",
 	"account.enhanced_model": "Model millorat",
 	"account.existing_keys": "Claus existents",
@@ -61,7 +61,7 @@
 	"account.monthly_consumibles": "Consum mensuals",
 	"account.new_token": "Nova clau de l'API",
 	"account.nua_client": "Nom del client",
-	"account.nua_key_activity": "Registre d'activitat",
+	"account.nua_key_activity": "Registre d'activitat de la clau Nuclia Understanding API",
 	"account.nua_key_activity_subtitle": "Activitat de la Knowledge Box dels últims 30 dies",
 	"account.nua_key_activity_title": "{{key}} registre d'activitat",
 	"account.nua_key_delete": "Suprimir la clau de la Nuclia Understanding API",
@@ -629,10 +629,10 @@
 	"search.type_of_document": "Tipus de document",
 	"search.type_of_results": "Tipus de resultats",
 	"setup.set_password": "Estableix la contrasenya",
-	"standalone.nua-key-status.invalid": "La clau de l'API NUA proporcionada no és vàlida",
-	"standalone.nua-key-status.loading-error": "S'ha produït un error en carregar l'estat de la clau de l'API NUA",
-	"standalone.nua-key-status.not-provided": "No s'ha proporcionat cap clau de l'API NUA",
-	"standalone.search-no-nua-key": "Esteu desconnectat del servidor nuclia.cloud i només obtindreu respostes basades en paraules clau. Els resultats semàntics i la cerca de gràfics de coneixement no funcionaran. Per obtenir una experiència de cerca completa, connecteu-vos al servidor mitjançant una clau API NUA.",
+	"standalone.nua-key-status.invalid": "La clau Nuclia Understanding API proporcionada no és vàlida",
+	"standalone.nua-key-status.loading-error": "S'ha produït un error en carregar l'estat de la clau Nuclia Understanding API",
+	"standalone.nua-key-status.not-provided": "No s'ha proporcionat cap clau de Nuclia Understanding API",
+	"standalone.search-no-nua-key": "Esteu desconnectat del servidor nuclia.cloud i només obtindreu respostes basades en paraules clau. Els resultats semàntics i la cerca de gràfics de coneixement no funcionaran. Per obtenir una experiència de cerca completa, connecteu-vos al servidor mitjançant una clau Nuclia Understanding API.",
 	"standalone.upload-no-nua-key": "No esteu connectat al servidor <strong>nuclia.cloud</strong> i les dades noves no es processaran.",
 	"stash.add_user": "Afegeix l'usuari",
 	"stash.added_user": "L'usuari {{user}} s'ha afegit",
