--- a/libs/common/src/assets/i18n/de.json
+++ b/libs/common/src/assets/i18n/de.json
@@ -38,7 +38,7 @@
 	"account.delete_user": "Benutzer löschen?",
 	"account.delete_user_confirm": "Möchten Sie Ihren Benutzer und den Zugang zu Nuclia löschen?",
 	"account.delete_user_warning": "Möchten Sie den Benutzer {{ username }}wirklich löschen?",
-	"account.edit_nua_key": "Bearbeiten Sie den API-Schlüssel für das Verständnis von Nuclia",
+	"account.edit_nua_key": "Bearbeiten Sie Nuclia Understanding API",
 	"account.email_info": "Mit dem Schlüssel verknüpfte Kontakt-E-Mail-Adresse",
 	"account.enhanced_model": "Erweitertes Modell",
 	"account.existing_keys": "Vorhandene Schlüssel",
@@ -61,7 +61,7 @@
 	"account.monthly_consumibles": "Monatliche Verbrauchsmaterialien",
 	"account.new_token": "Neuer API-Schlüssel",
 	"account.nua_client": "Kundenname",
-	"account.nua_key_activity": "NU-API-Schlüsselaktivitätsprotokoll",
+	"account.nua_key_activity": "Nuclia Understanding API-Schlüsselaktivitätsprotokoll",
 	"account.nua_key_activity_subtitle": "Knowledge Box-Aktivität der letzten 30 Tage",
 	"account.nua_key_activity_title": "{{key}} Aktivitätsprotokoll",
 	"account.nua_key_delete": "Löschen Sie den Nuclia Understanding API-Schlüssel",
@@ -630,10 +630,10 @@
 	"search.type_of_document": "Art des Dokuments",
 	"search.type_of_results": "Art der Ergebnisse",
 	"setup.set_password": "Lege ein Passwort fest",
-	"standalone.nua-key-status.invalid": "Der bereitgestellte NUA-API-Schlüssel ist ungültig",
-	"standalone.nua-key-status.loading-error": "Fehler beim Laden des NUA-API-Schlüsselstatus",
-	"standalone.nua-key-status.not-provided": "Kein NUA-API-Schlüssel bereitgestellt",
-	"standalone.search-no-nua-key": "Sie werden vom nuclia.cloud-Server getrennt und erhalten nur schlüsselwortbasierte Antworten. Semantische Ergebnisse und die Suche nach Wissensgraphen funktionieren nicht. Für ein umfassendes Sucherlebnis stellen Sie bitte über einen NUA-API-Schlüssel eine Verbindung zum Server her.",
+	"standalone.nua-key-status.invalid": "Der bereitgestellte Nuclia Understanding API-Schlüssel ist ungültig",
+	"standalone.nua-key-status.loading-error": "Fehler beim Laden des Nuclia Understanding API-Schlüsselstatus",
+	"standalone.nua-key-status.not-provided": "Kein Nuclia Understanding API-Schlüssel bereitgestellt",
+	"standalone.search-no-nua-key": "Sie werden vom nuclia.cloud-Server getrennt und erhalten nur schlüsselwortbasierte Antworten. Semantische Ergebnisse und die Suche nach Wissensgraphen funktionieren nicht. Für ein umfassendes Sucherlebnis stellen Sie bitte über einen Nuclia Understanding API-Schlüssel eine Verbindung zum Server her.",
 	"standalone.upload-no-nua-key": "Sie sind nicht mit dem Server <strong>nuclia.cloud</strong> verbunden und neue Daten werden nicht verarbeitet.",
 	"stash.add_user": "Nutzer hinzufügen",
 	"stash.added_user": " {{user}} wurde hinzugefügt",
