--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -20,7 +20,7 @@
 	"account.code_saved": "Code entered",
 	"account.config": "Account settings",
 	"account.create_new_db": "Create a new Nuclia DB account",
-	"account.create_nua_key": "Create new Nuclia understanding API key ",
+	"account.create_nua_key": "Create new Nuclia Understanding API key ",
 	"account.day_left": "1 day left",
 	"account.days_left": "{{days}} days left",
 	"account.db_zone_description": "Select the zone and the processing provider you would like to use for this account (defaults to the account’s zone)",
@@ -38,7 +38,7 @@
 	"account.delete_user": "Delete user?",
 	"account.delete_user_confirm": "Do you want to delete your user and the access to Nuclia?",
 	"account.delete_user_warning": "Are you sure you want to delete user {{ username }}?",
-	"account.edit_nua_key": "Edit Nuclia understanding API key ",
+	"account.edit_nua_key": "Edit Nuclia Understanding API key ",
 	"account.email_info": "Contact email associated with the key",
 	"account.enhanced_model": "Enhanced model",
 	"account.existing_keys": "Existing keys",
@@ -61,7 +61,7 @@
 	"account.monthly_consumibles": "Monthly consumibles",
 	"account.new_token": "New API key",
 	"account.nua_client": "Client name",
-	"account.nua_key_activity": "NU-API key activity log",
+	"account.nua_key_activity": "Nuclia Understanding API key activity log",
 	"account.nua_key_activity_subtitle": "Last 30 days Knowledge Box activity",
 	"account.nua_key_activity_title": "{{key}} activity log",
 	"account.nua_key_delete": "Delete Nuclia Understanding API key",
@@ -630,10 +630,10 @@
 	"search.type_of_document": "Type of document",
 	"search.type_of_results": "Type of results",
 	"setup.set_password": "Set your password",
-	"standalone.nua-key-status.invalid": "NUA API key provided is invalid",
-	"standalone.nua-key-status.loading-error": "Error while loading NUA API key status",
-	"standalone.nua-key-status.not-provided": "No NUA API key provided",
-	"standalone.search-no-nua-key": "You are disconnected from the nuclia.cloud server and you will only get keyword-based answers. Semantic results and knowledge graph search will not work. For a complete search experience, please connect to the server using a NUA API key.",
+	"standalone.nua-key-status.invalid": "Nuclia Understanding API key provided is invalid",
+	"standalone.nua-key-status.loading-error": "Error while loading Nuclia Understanding API key status",
+	"standalone.nua-key-status.not-provided": "No Nuclia Understanding API key provided",
+	"standalone.search-no-nua-key": "You are disconnected from the nuclia.cloud server and you will only get keyword-based answers. Semantic results and knowledge graph search will not work. For a complete search experience, please connect to the server using a Nuclia Understanding API key.",
 	"standalone.upload-no-nua-key": "You are not connected to the <strong>nuclia.cloud</strong> server and new data won’t be processed.",
 	"stash.add_user": "Add user",
 	"stash.added_user": "{{user}} has been added",
