--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -20,7 +20,7 @@
 	"account.code_saved": "Código introducido",
 	"account.config": "Configuración de la cuenta",
 	"account.create_new_db": "Crear nueva cuenta de Nuclia DB",
-	"account.create_nua_key": "Crear una nueva clave API de comprensión de Nuclia",
+	"account.create_nua_key": "Crear una nueva clave Nuclia Understanding API",
 	"account.day_left": "Queda 1 día",
 	"account.days_left": "Quedan {{days}} días",
 	"account.db_zone_description": "Elige la zona y el proveedor de procesamiento que quieres utilizar para esta cuenta. De forma predeterminada aparece la zona escogida en el Account",
@@ -38,7 +38,7 @@
 	"account.delete_user": "¿Eliminar usuario?",
 	"account.delete_user_confirm": "Quieres eliminar tu usuario y el acceso a Nuclia ?",
 	"account.delete_user_warning": "¿Seguro que quieres eliminar el usuario {{ username }}?",
-	"account.edit_nua_key": "Editar la clave API de comprensión de Nuclia",
+	"account.edit_nua_key": "Editar la clave Nuclia Understanding API",
 	"account.email_info": "Correo electrónico de contacto asociado a la clave",
 	"account.enhanced_model": "Modelo mejorado",
 	"account.existing_keys": "Claves existentes",
@@ -61,7 +61,7 @@
 	"account.monthly_consumibles": "Consumo mensuales",
 	"account.new_token": "Nueva clave API",
 	"account.nua_client": "Nombre del cliente",
-	"account.nua_key_activity": "Registro de actividad",
+	"account.nua_key_activity": "Registro de actividad de la clave Nuclia Understanding API",
 	"account.nua_key_activity_subtitle": "Actividad del Knowledge Box de los últimos 30 días",
 	"account.nua_key_activity_title": "{{key}} registro de actividad",
 	"account.nua_key_delete": "Eliminar la clave de la Nuclia Understanding API",
@@ -629,10 +629,10 @@
 	"search.type_of_document": "Tipo de documento",
 	"search.type_of_results": "Tipo de resultados",
 	"setup.set_password": "Establece tu contraseña",
-	"standalone.nua-key-status.invalid": "La clave API NUA proporcionada no es válida",
-	"standalone.nua-key-status.loading-error": "Error al cargar el estado de la clave API de NUA",
-	"standalone.nua-key-status.not-provided": "No se proporcionó ninguna clave API NUA",
-	"standalone.search-no-nua-key": "Estás desconectado del servidor nuclia.cloud y solo obtendrás respuestas basadas en palabras clave. Los resultados semánticos y la búsqueda de gráficos de conocimiento no funcionarán. Para una experiencia de búsqueda completa, conéctese al servidor utilizando una clave API NUA.",
+	"standalone.nua-key-status.invalid": "La clave Nuclia Understanding API proporcionada no es válida",
+	"standalone.nua-key-status.loading-error": "Error al cargar el estado de la clave Nuclia Understanding API",
+	"standalone.nua-key-status.not-provided": "No se proporcionó ninguna clave Nuclia Understanding API",
+	"standalone.search-no-nua-key": "Estás desconectado del servidor nuclia.cloud y solo obtendrás respuestas basadas en palabras clave. Los resultados semánticos y la búsqueda de gráficos de conocimiento no funcionarán. Para una experiencia de búsqueda completa, conéctese al servidor utilizando una clave Nuclia Understanding API.",
 	"standalone.upload-no-nua-key": "No estás conectado al servidor <strong>nuclia.cloud</strong> y no se procesarán nuevos datos.",
 	"stash.add_user": "Añadir usuario",
 	"stash.added_user": "El usuario {{user}} ha sido añadido",
