--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -20,7 +20,7 @@
 	"account.code_saved": "Code saisi",
 	"account.config": "Paramètres du compte",
 	"account.create_new_db": "Créer un nouveau compte Nuclia DB",
-	"account.create_nua_key": "Créer une nouvelle clé API pour la compréhension de Nuclia",
+	"account.create_nua_key": "Créer une nouvelle clé Nuclia Understanding API",
 	"account.day_left": "1 jour restant",
 	"account.days_left": " Il reste{{days}} jours",
 	"account.db_zone_description": "Sélectionnez la zone et le fournisseur de services de traitement que vous souhaitez utiliser pour ce compte (la zone du compte est sélectionnée par défaut).",
@@ -38,7 +38,7 @@
 	"account.delete_user": "Supprimer un utilisateur ?",
 	"account.delete_user_confirm": "Voulez-vous supprimer votre utilisateur et l'accès à Nuclia ?",
 	"account.delete_user_warning": "Êtes-vous sûr de vouloir supprimer l'utilisateur {{ username }} ?",
-	"account.edit_nua_key": "Modifier la clé API de compréhension de Nuclia",
+	"account.edit_nua_key": "Modifier la clé Nuclia Understanding API",
 	"account.email_info": "Courriel du contact associé à la clé",
 	"account.enhanced_model": "Modèle amélioré",
 	"account.existing_keys": "Clés existantes",
@@ -61,13 +61,13 @@
 	"account.monthly_consumibles": "Consommables mensuels",
 	"account.new_token": "Nouvelle clé API",
 	"account.nua_client": "Nom du client",
-	"account.nua_key_activity": "Journal des activités clés de la NU-API",
+	"account.nua_key_activity": "Journal des activités de la clé Nuclia Understanding API",
 	"account.nua_key_activity_subtitle": "30 derniers jours d'activité de la Knowledge Box",
 	"account.nua_key_activity_title": "{{key}} journal d'activité",
-	"account.nua_key_delete": "Supprimer la clé API de Nuclia Understanding",
+	"account.nua_key_delete": "Supprimer la clé Nuclia Understanding API",
 	"account.nua_key_delete_warning": "La suppression de cette clé entraîne la perte de tous les travaux en cours.",
-	"account.nua_keys": "Nuclia Comprendre les clés API",
-	"account.nua_webhook": "URL de la page web",
+	"account.nua_keys": "Clés Nuclia Understanding API",
+	"account.nua_webhook": "Webhook URL",
 	"account.nua_webhook_help": "Une fois vos données traitées, le résultat est affiché à l'adresse suivante",
 	"account.public": "Public",
 	"account.related_kbs": "Knowledge Boxes du compte",
@@ -630,10 +630,10 @@
 	"search.type_of_document": "Type de document",
 	"search.type_of_results": "Type de résultats",
 	"setup.set_password": "Définir votre mot de passe",
-	"standalone.nua-key-status.invalid": "La clé API NUA fournie n'est pas valide",
-	"standalone.nua-key-status.loading-error": "Erreur lors du chargement de l'état de la clé API NUA",
-	"standalone.nua-key-status.not-provided": "Aucune clé API NUA fournie",
-	"standalone.search-no-nua-key": "Vous êtes déconnecté du serveur nuclia.cloud et vous n'obtiendrez que des réponses basées sur des mots clés. Les résultats sémantiques et la recherche par graphe de connaissances ne fonctionneront pas. Pour une expérience de recherche complète, veuillez vous connecter au serveur à l'aide d'une clé API NUA.",
+	"standalone.nua-key-status.invalid": "La clé Nuclia Understanding API fournie n'est pas valide",
+	"standalone.nua-key-status.loading-error": "Erreur lors du chargement de l'état de la clé Nuclia Understanding API",
+	"standalone.nua-key-status.not-provided": "Aucune clé Nuclia Understanding API fournie",
+	"standalone.search-no-nua-key": "Vous êtes déconnecté du serveur nuclia.cloud et vous n'obtiendrez que des réponses basées sur des mots clés. Les résultats sémantiques et la recherche par graphe de connaissances ne fonctionneront pas. Pour une expérience de recherche complète, veuillez vous connecter au serveur à l'aide d'une clé Nuclia Understanding API.",
 	"standalone.upload-no-nua-key": "Vous n'êtes pas connecté au serveur <strong>nuclia.cloud</strong> et les nouvelles données ne seront pas traitées.",
 	"stash.add_user": "Ajouter un utilisateur",
 	"stash.added_user": "{{user}} a été ajouté",
