--- a/libs/common/src/assets/i18n/pt.json
+++ b/libs/common/src/assets/i18n/pt.json
@@ -20,7 +20,7 @@
 	"account.code_saved": "Código inserido",
 	"account.config": "Configurações da conta",
 	"account.create_new_db": "Crie uma nova conta Nuclia DB",
-	"account.create_nua_key": "Crie uma nova chave de API de compreensão da Nuclia",
+	"account.create_nua_key": "Crie uma nova chave de Nuclia Understanding API",
 	"account.day_left": "falta 1 dia",
 	"account.days_left": " Faltam{{days}} dias",
 	"account.db_zone_description": "Selecione a zona e o provedor de processamento que você gostaria de usar para esta conta (o padrão é a zona da conta)",
@@ -38,7 +38,7 @@
 	"account.delete_user": "Deletar usuário?",
 	"account.delete_user_confirm": "Deseja excluir seu usuário e o acesso ao Nuclia?",
 	"account.delete_user_warning": "Tem certeza de que deseja excluir o usuário {{ username }}?",
-	"account.edit_nua_key": "Editar a chave de API de compreensão da Nuclia",
+	"account.edit_nua_key": "Editar a chave Nuclia Understanding API",
 	"account.email_info": "E-mail de contato associado à chave",
 	"account.enhanced_model": "Modelo aprimorado",
 	"account.existing_keys": "Chaves existentes",
@@ -61,13 +61,13 @@
 	"account.monthly_consumibles": "Consumíveis mensais",
 	"account.new_token": "Nova chave de API",
 	"account.nua_client": "Nome do cliente",
-	"account.nua_key_activity": "Registro de atividades da chave NU-API",
+	"account.nua_key_activity": "Registro de atividades da chave Nuclia Understanding API",
 	"account.nua_key_activity_subtitle": "Atividade da Knowledge Box dos últimos 30 dias",
 	"account.nua_key_activity_title": "{{key}} registro de atividades",
-	"account.nua_key_delete": "Excluir chave de API Nuclia Understanding",
+	"account.nua_key_delete": "Excluir chave de Nuclia Understanding API",
 	"account.nua_key_delete_warning": "Ao excluir esta chave, todos os trabalhos em andamento serão perdidos.",
-	"account.nua_keys": "Nuclia: Noções básicas sobre chaves de API",
-	"account.nua_webhook": "URL do Webhook",
+	"account.nua_keys": "Chaves Nuclia Understanding API",
+	"account.nua_webhook": "Webhook URL",
 	"account.nua_webhook_help": "Assim que seus dados forem processados, o resultado será postado neste URL",
 	"account.public": "Público",
 	"account.related_kbs": "Knowledge Boxes da conta",
@@ -630,10 +630,10 @@
 	"search.type_of_document": "Tipo de documento",
 	"search.type_of_results": "Tipo de resultados",
 	"setup.set_password": "Coloque sua senha",
-	"standalone.nua-key-status.invalid": "A chave de API NUA fornecida é inválida",
-	"standalone.nua-key-status.loading-error": "Erro ao carregar o status da chave da API NUA",
-	"standalone.nua-key-status.not-provided": "Nenhuma chave de API NUA fornecida",
-	"standalone.search-no-nua-key": "Você está desconectado do servidor nuclia.cloud e receberá apenas respostas baseadas em palavras-chave. Os resultados semânticos e a pesquisa do gráfico de conhecimento não funcionarão. Para uma experiência de pesquisa completa, conecte-se ao servidor usando uma chave API NUA.",
+	"standalone.nua-key-status.invalid": "A chave Nuclia Understanding API fornecida é inválida",
+	"standalone.nua-key-status.loading-error": "Erro ao carregar o status da chave da Nuclia Understanding API",
+	"standalone.nua-key-status.not-provided": "Nenhuma chave Nuclia Understanding API fornecida",
+	"standalone.search-no-nua-key": "Você está desconectado do servidor nuclia.cloud e receberá apenas respostas baseadas em palavras-chave. Os resultados semânticos e a pesquisa do gráfico de conhecimento não funcionarão. Para uma experiência de pesquisa completa, conecte-se ao servidor usando uma chave Nuclia Understanding API.",
 	"standalone.upload-no-nua-key": "Você não está conectado ao servidor <strong>nuclia.cloud</strong> e novos dados não serão processados.",
 	"stash.add_user": "Adicionar usuário",
 	"stash.added_user": "{{user}} foi adicionado",
