[sc-7638] Disclaimer for anonymization
- Replace the function called from the template by a pipe
- Add translations for enabled and disabled options, and replace `multilingual` by `enabled` for anonymization
- Add confirmation dialog when anonymization is selected

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -636,6 +636,9 @@
 	"standalone.upload-no-nua-key": "No esteu connectat al servidor <strong>nuclia.cloud</strong> i les dades noves no es processaran.",
 	"stash.add_user": "Afegeix l'usuari",
 	"stash.added_user": "L'usuari {{user}} s'ha afegit",
+	"stash.config.confirm-anonymization.confirm-button": "Anònim",
+	"stash.config.confirm-anonymization.description": "Un cop anonimitzats els recursos, no es pot desfer. <br>Nota: la nova configuració d'anonimització no afectarà els recursos existents",
+	"stash.config.confirm-anonymization.title": "Avís: els recursos futurs es veuran afectats",
 	"stash.config.failure": "S'ha produït un error en desar la configuració.",
 	"stash.config.key.azure_openai": "Azure OpenAI key",
 	"stash.config.key.openai": "OpenAI key",
@@ -643,6 +646,8 @@
 	"stash.config.option.chatgpt": "ChatGPT OpenAI",
 	"stash.config.option.chatgpt-azure": "ChatGPT Azure OpenAI",
 	"stash.config.option.cohere": "Cohere (beta)",
+	"stash.config.option.disabled": "Desactivat",
+	"stash.config.option.enabled": "Habilitat",
 	"stash.config.option.generative-multilingual-2023": "Nuclia multilingual private model",
 	"stash.config.option.multilingual-2023-08-16": "multilingual (alpha)",
 	"stash.config.option.nuclia-atlas-v1": "Atlas",
@@ -654,7 +659,7 @@
 	"stash.confirm_delete_user.description": "L'única manera de desfer aquesta acció és convidant-lo de nou a unir-se a la Knowledge Box.",
 	"stash.confirm_delete_user.title": "Estas segur que vols eliminar aquest usuari?",
 	"stash.contact_admin": "No esteu autoritzat per crear un Knowledge Box. Contacta amb el teu administrador.",
-	"stash.create.anonymization_model.help": "Apliqueu l'anonimat conforme al Reglament General de Protecció de Dades (GDPR) a tots els recursos del Knowledge Box",
+	"stash.create.anonymization_model.help": "Apliqueu l'anonimat conforme al Reglament General de Protecció de Dades (GDPR) a tots els recursos nous del Knowledge Box",
 	"stash.create.anonymization_model.label": "Anonimatització",
 	"stash.create.error": "Perdó, alguna cosa ha anat malament quan creavem la Knowledge Box. Torneu-ho a intenta, sius plau",
 	"stash.create.failure": "Ho sento, alguna cosa definitivament no funciona en aquest moment. Si us plau, poseu-vos en contacte amb el vostre administrador.",
