--- a/libs/common/src/assets/i18n/de.json
+++ b/libs/common/src/assets/i18n/de.json
@@ -637,6 +637,9 @@
 	"standalone.upload-no-nua-key": "Sie sind nicht mit dem Server <strong>nuclia.cloud</strong> verbunden und neue Daten werden nicht verarbeitet.",
 	"stash.add_user": "Nutzer hinzufügen",
 	"stash.added_user": " {{user}} wurde hinzugefügt",
+	"stash.config.confirm-anonymization.confirm-button": "Anonymisieren",
+	"stash.config.confirm-anonymization.description": "Sobald die Ressourcen anonymisiert sind, kann dies nicht rückgängig gemacht werden. <br>Hinweis: Neue Anonymisierungseinstellungen wirken sich nicht auf vorhandene Ressourcen aus",
+	"stash.config.confirm-anonymization.title": "Warnung: Zukünftige Ressourcen werden betroffen sein",
 	"stash.config.failure": "Beim Speichern der Einstellungen ist ein Fehler aufgetreten.",
 	"stash.config.key.azure_openai": "Azure OpenAI-Schlüssel",
 	"stash.config.key.openai": "OpenAI-Schlüssel",
@@ -644,6 +647,8 @@
 	"stash.config.option.chatgpt": "ChatGPT OpenAI",
 	"stash.config.option.chatgpt-azure": "ChatGPT Azure OpenAI",
 	"stash.config.option.cohere": "Cohere (Beta)",
+	"stash.config.option.disabled": "Deaktiviert",
+	"stash.config.option.enabled": "Aktiviert",
 	"stash.config.option.generative-multilingual-2023": "Mehrsprachiges Privatmodell von Nuclia",
 	"stash.config.option.multilingual-2023-08-16": "mehrsprachig (alpha)",
 	"stash.config.option.nuclia-atlas-v1": "Atlas",
@@ -655,7 +660,7 @@
 	"stash.confirm_delete_user.description": "Sie können diese Aktion nur rückgängig machen, indem Sie sie erneut einladen, sich Ihrer Knowledge Box anzuschließen.",
 	"stash.confirm_delete_user.title": "Sind Sie sicher, dass Sie diesen Benutzer löschen möchten?",
 	"stash.contact_admin": "Sie sind nicht berechtigt, eine Knowledge Box zu erstellen. Kontaktieren Sie Ihren Administrator.",
-	"stash.create.anonymization_model.help": "Wenden Sie die mit der Datenschutz-Grundverordnung (DSGVO) konforme Anonymisierung auf alle Ressourcen in der Knowledge Box an",
+	"stash.create.anonymization_model.help": "Wenden Sie die mit der Datenschutz-Grundverordnung (DSGVO) konforme Anonymisierung auf alle neuen Ressourcen in der Knowledge Box an",
 	"stash.create.anonymization_model.label": "Anonymisierung",
 	"stash.create.error": "Beim Erstellen der Knowledge Box ist ein Fehler aufgetreten. Bitte versuche es erneut.",
 	"stash.create.failure": "Im Moment stimmt etwas nicht. Kontaktieren Sie Ihren Administrator.",
