--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -636,6 +636,9 @@
 	"standalone.upload-no-nua-key": "No estás conectado al servidor <strong>nuclia.cloud</strong> y no se procesarán nuevos datos.",
 	"stash.add_user": "Añadir usuario",
 	"stash.added_user": "El usuario {{user}} ha sido añadido",
+	"stash.config.confirm-anonymization.confirm-button": "Anonimizar",
+	"stash.config.confirm-anonymization.description": "Una vez que los recursos se anonimizan, no se puede deshacer. <br>Nota: la nueva configuración de anonimización no afectará los recursos existentes",
+	"stash.config.confirm-anonymization.title": "Advertencia: los recursos futuros se verán afectados",
 	"stash.config.failure": "Se produjo un error al guardar la configuración.",
 	"stash.config.key.azure_openai": "Azure OpenAI key",
 	"stash.config.key.openai": "OpenAI key",
@@ -643,6 +646,8 @@
 	"stash.config.option.chatgpt": "ChatGPT OpenAI",
 	"stash.config.option.chatgpt-azure": "ChatGPT Azure OpenAI",
 	"stash.config.option.cohere": "Cohere (beta)",
+	"stash.config.option.disabled": "Discapacitado",
+	"stash.config.option.enabled": "Habilitado",
 	"stash.config.option.generative-multilingual-2023": "Nuclia multilingual private model",
 	"stash.config.option.multilingual-2023-08-16": "multilingual (alpha)",
 	"stash.config.option.nuclia-atlas-v1": "Atlas",
@@ -654,7 +659,7 @@
 	"stash.confirm_delete_user.description": "La única forma de deshacer esta acción es invitandolo de nuevo a unirse a la Knowledge Box.",
 	"stash.confirm_delete_user.title": "¿Estás seguro de que deseas eliminar este usuario?",
 	"stash.contact_admin": "No está autorizado para crear un Knowledge Box. Póngase en contacto con su administrador.",
-	"stash.create.anonymization_model.help": "Aplicar la anonimización conforme al Reglamento General de Protección de Datos (GDPR) a todos los recursos en el Cuadro de Conocimiento",
+	"stash.create.anonymization_model.help": "Aplicar la anonimización conforme al Reglamento general de protección de datos (GDPR) a todos los recursos nuevos en el Knowledge Box",
 	"stash.create.anonymization_model.label": "Anonimización",
 	"stash.create.error": "Perdon, alguna cosa pasó mal cuando creabamos la Knowledge Box. Por favor vuelve a intentarlo.",
 	"stash.create.failure": "Lo siento, definitivamente algo anda mal en este momento. Por favor, póngase en contacto con su administrador.",
