--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -637,6 +637,9 @@
 	"standalone.upload-no-nua-key": "Vous n'êtes pas connecté au serveur <strong>nuclia.cloud</strong> et les nouvelles données ne seront pas traitées.",
 	"stash.add_user": "Ajouter un utilisateur",
 	"stash.added_user": "{{user}} a été ajouté",
+	"stash.config.confirm-anonymization.confirm-button": "Anonymiser",
+	"stash.config.confirm-anonymization.description": "Une fois les ressources anonymisées, cela ne peut plus être annulé. <br>Remarque : les nouveaux paramètres d'anonymisation n'affecteront pas les ressources existantes",
+	"stash.config.confirm-anonymization.title": "Attention : les ressources futures seront affectées",
 	"stash.config.failure": "Une erreur s'est produite lors de l'enregistrement des paramètres.",
 	"stash.config.key.azure_openai": "Clé Azure OpenAI",
 	"stash.config.key.openai": "Clé OpenAI",
@@ -644,6 +647,8 @@
 	"stash.config.option.chatgpt": "ChatGPT OpenAI",
 	"stash.config.option.chatgpt-azure": "ChatGPT Azure OpenAI",
 	"stash.config.option.cohere": "Cohere (beta)",
+	"stash.config.option.disabled": "Désactivé",
+	"stash.config.option.enabled": "Activé",
 	"stash.config.option.generative-multilingual-2023": "Modèle privé multilingue Nuclia",
 	"stash.config.option.multilingual-2023-08-16": "multilingual (alpha)",
 	"stash.config.option.nuclia-atlas-v1": "Atlas",
@@ -655,7 +660,7 @@
 	"stash.confirm_delete_user.description": "La seule façon d’annuler cette action est de les inviter à nouveau à rejoindre votre Knowledge Box.",
 	"stash.confirm_delete_user.title": "Êtes-vous sûr de vouloir supprimer cet utilisateur ?",
 	"stash.contact_admin": "Vous n'êtes pas autorisé à créer une Knowledge Box. Contactez votre administrateur.",
-	"stash.create.anonymization_model.help": "Appliquer l'anonymisation conforme au Règlement général sur la protection des données (RGPD) à toutes les ressources de la Knowledge Box",
+	"stash.create.anonymization_model.help": "Appliquer l'anonymisation conforme au Règlement général sur la protection des données (RGPD) à toutes les nouvelles ressources de la Knowledge Box",
 	"stash.create.anonymization_model.label": "Anonymisation",
 	"stash.create.error": "Une erreur s'est produite lors de la création de la Knowledge Box. Veuillez réessayer.",
 	"stash.create.failure": "Quelque chose ne va pas en ce moment. Contactez votre administrateur.",
