--- a/libs/common/src/assets/i18n/pt.json
+++ b/libs/common/src/assets/i18n/pt.json
@@ -637,6 +637,9 @@
 	"standalone.upload-no-nua-key": "Você não está conectado ao servidor <strong>nuclia.cloud</strong> e novos dados não serão processados.",
 	"stash.add_user": "Adicionar usuário",
 	"stash.added_user": "{{user}} foi adicionado",
+	"stash.config.confirm-anonymization.confirm-button": "Anonimizar",
+	"stash.config.confirm-anonymization.description": "Uma vez anonimizados os recursos, isso não pode ser desfeito. <br>Observação: as novas configurações de anonimato não afetarão os recursos existentes",
+	"stash.config.confirm-anonymization.title": "Aviso: recursos futuros serão afetados",
 	"stash.config.failure": "Ocorreu um erro ao salvar as configurações.",
 	"stash.config.key.azure_openai": "Chave OpenAI do Azure",
 	"stash.config.key.openai": "Chave OpenAI",
@@ -644,6 +647,8 @@
 	"stash.config.option.chatgpt": "ChatGPT OpenAI",
 	"stash.config.option.chatgpt-azure": "ChatGPT Azure OpenAI",
 	"stash.config.option.cohere": "Cohere (beta)",
+	"stash.config.option.disabled": "Desativado",
+	"stash.config.option.enabled": "Ativado",
 	"stash.config.option.generative-multilingual-2023": "Modelo privado multilíngue Nuclia",
 	"stash.config.option.multilingual-2023-08-16": "multilíngue (alpha)",
 	"stash.config.option.nuclia-atlas-v1": "Atlas",
@@ -655,7 +660,7 @@
 	"stash.confirm_delete_user.description": "A única maneira de desfazer essa ação é convidá-los novamente para ingressar na sua Knowledge Box.",
 	"stash.confirm_delete_user.title": "Tem certeza de que deseja excluir este usuário?",
 	"stash.contact_admin": "Você não está autorizado a criar uma Knowledge Box. Entre em contato com seu administrador.",
-	"stash.create.anonymization_model.help": "Aplicar anonimização compatível com o Regulamento Geral de Proteção de Dados (GDPR) a todos os recursos na Caixa de conhecimento",
+	"stash.create.anonymization_model.help": "Aplique a anonimização compatível com o Regulamento Geral de Proteção de Dados (GDPR) a todos os novos recursos na Caixa de Conhecimento",
 	"stash.create.anonymization_model.label": "Anonimização",
 	"stash.create.error": "Algo deu errado ao criar a Knowledge Box. Por favor, tente novamente.",
 	"stash.create.failure": "Algo está errado no momento. Entre em contato com seu administrador.",
