--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -637,6 +637,9 @@
 	"standalone.upload-no-nua-key": "You are not connected to the <strong>nuclia.cloud</strong> server and new data won’t be processed.",
 	"stash.add_user": "Add user",
 	"stash.added_user": "{{user}} has been added",
+	"stash.config.confirm-anonymization.confirm-button": "Anonymize",
+	"stash.config.confirm-anonymization.description": "Once the resources are anonymized, it cannot be undone. <br>\nNote: new anonymization settings will not affect existing resources",
+	"stash.config.confirm-anonymization.title": "Warning: future resources will be affected",
 	"stash.config.failure": "An error occured when saving the settings.",
 	"stash.config.key.azure_openai": "Azure OpenAI key",
 	"stash.config.key.openai": "OpenAI key",
@@ -644,6 +647,8 @@
 	"stash.config.option.chatgpt": "ChatGPT OpenAI",
 	"stash.config.option.chatgpt-azure": "ChatGPT Azure OpenAI",
 	"stash.config.option.cohere": "Cohere (beta)",
+	"stash.config.option.disabled": "Disabled",
+	"stash.config.option.enabled": "Enabled",
 	"stash.config.option.generative-multilingual-2023": "Nuclia multilingual private model",
 	"stash.config.option.multilingual-2023-08-16": "multilingual (alpha)",
 	"stash.config.option.nuclia-atlas-v1": "Atlas",
@@ -655,7 +660,7 @@
 	"stash.confirm_delete_user.description": "The only way you can undo this action is by inviting them again to join your Knowledge Box.",
 	"stash.confirm_delete_user.title": "Are you sure  you want to delete this user?",
 	"stash.contact_admin": "You are not authorized to create a Knowledge Box. Contact your administrator.",
-	"stash.create.anonymization_model.help": "Apply General Data Protection Regulation (GDPR) compliant anonymization to all resources in the Knowledge Box",
+	"stash.create.anonymization_model.help": "Apply General Data Protection Regulation (GDPR) compliant anonymization to all new resources in the Knowledge Box",
 	"stash.create.anonymization_model.label": "Anonymization ",
 	"stash.create.error": "Something went wrong when creating the Knowledge Box. Please try again.",
 	"stash.create.failure": "Something is wrong at the moment. Contact your administrator.",
